--- a/kbe-ex/pom.xml
+++ b/kbe-ex/pom.xml
@@ -34,6 +34,12 @@
 			<version>5.4.0</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
 	</dependencies>
 
 	<build>
